--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
-    "mongodb": "^6.3.0",
-    "dotenv": "^16.3.1",
+    "mongodb": "^6.10.0",
+    "dotenv": "^16.4.5",
     "cors": "^2.8.5",
-    "validator": "^13.11.0"
+    "validator": "^13.12.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.1.7"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": "20.x"
   }
 }
