--- a/package.json
+++ b/package.json
@@ -14,15 +14,14 @@
     "games",
     "express"
   ],
-  "author": "Your Name",
+  "author": "Henry Ugochukwu",
   "license": "MIT",
   "dependencies": {
     "express": "^4.21.1",
-    "mongodb": "^6.10.0",
+    "mongodb": "^5.9.2",
     "dotenv": "^16.4.5",
     "cors": "^2.8.5",
-    "validator": "^13.12.0",
-    "@mongodb-js/saslprep": "^1.1.9"
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
