--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
   "author": "Henry Ugochukwu",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mongodb": "^5.9.2",
-    "dotenv": "^16.4.5",
-    "cors": "^2.8.5",
+    "socks": "^2.8.7",
     "validator": "^13.12.0"
   },
   "devDependencies": {
