--- a/package.json
+++ b/package.json
@@ -5,16 +5,13 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "mongoose": "^7.5.0",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
-    "passport": "^0.6.0",
-    "passport-google-oauth20": "^2.0.0",
     "dotenv": "^16.3.1",
     "cors": "^2.8.5",
     "express-validator": "^7.0.1"
