--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "golobel-counselling-app",
+  "name": "library-management-api",
   "version": "1.0.0",
-  "description": "Mental health counselling platform API",
+  "description": "Book Library Management API with CRUD operations",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
+  "keywords": ["library", "books", "api", "mongodb"],
+  "author": "Your Name",
+  "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^7.5.0",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.3.0",
     "dotenv": "^16.3.1",
     "cors": "^2.8.5",
     "express-validator": "^7.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.2"
   }
 }
