--- a/package.json
+++ b/package.json
@@ -7,15 +7,21 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": ["library", "books", "api", "mongodb"],
+  "keywords": [
+    "library",
+    "books",
+    "api",
+    "mongodb"
+  ],
   "author": "Your Name",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongodb": "^6.3.0",
-    "dotenv": "^16.3.1",
+    "@mongodb-js/saslprep": "^1.3.2",
     "cors": "^2.8.5",
-    "express-validator": "^7.0.1"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "mongodb": "^6.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
