--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
-    "mongodb": "^5.9.2"
+    "mongodb": "^5.9.2",
+    "socks": "^2.8.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
