--- a/package.json
+++ b/package.json
@@ -7,15 +7,20 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": ["library", "books", "api", "mongodb"],
+  "keywords": [
+    "library",
+    "books",
+    "api",
+    "mongodb"
+  ],
   "author": "Your Name",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongodb": "^6.3.0",
-    "dotenv": "^16.3.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "mongodb": "^6.21.0",
     "socks": "^2.7.1"
   },
   "engines": {
