--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "mongodb": "^6.21.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "socks": "^2.7.1"
+    "socks": "^2.7.1",
+    "swagger-ui-express": "^5.0.1"
   },
   "engines": {
     "node": ">=18.0.0"
